--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
           <label for="js-message-input" class="sr-only">Message:</label>
           <input type="text" class="form-control" data-chat="message-input" autofocus>
           <span class="input-group-btn">
-            <button class="btn btn-default" type="button">Go!</button>
+            <button id="send-message-btn" class="btn btn-default" type="button">Go!</button>
           </span>
         </div>
       </form>
